# lethe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Launch De-identifier.bat  NOTICE  README.md  ROADMAP.md  _doc_test.py  _smoke_test.py  app.py  build_portable.ps1  core.py  installer.iss  make_samples.py  nlp_suggester.py  pyproject.toml  requirements-nlp.txt  requirements.txt  store.py  vault.py
.claude/memory/: MEMORY.md  email-ingestion.md  keep-docs-in-sync.md  restore-tab.md  testing-and-ci.md
.github/: FUNDING.yml  release-notes.md
.github/workflows/: ci.yml  release.yml
lethe/: __init__.py  core.py  docio.py  nlp_suggester.py  store.py  vault.py
samples/: sample-counterparties.xlsx  sample-memo.docx
tests/: test_core.py  test_doc.py  test_email.py  test_ocr_pdf.py  test_pptx.py  test_restore.py  test_smoke.py
tools/: make_samples.py
