[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lethe"
version = "1.3.1"
description = "Lethe — a local, reversible document de-identifier"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [{ name = "Meng Huey" }]
keywords = ["pii", "de-identification", "redaction", "privacy", "nicegui", "presidio"]

# Base engine + UI. The NLP suggestion engine is an optional extra (see below);
# without it, Lethe falls back to a built-in regex name-guesser.
dependencies = [
    "nicegui",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "pypdf",
    "pdfplumber",
    "cryptography",
]

[project.optional-dependencies]
# Microsoft Presidio + spaCy + the small English model. Needs Python <= 3.13
# (spaCy has no 3.14 wheels yet). Install with:  pipx install "lethe[nlp] @ git+..."
nlp = [
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
# Fully-local OCR for scanned / image-based PDF pages (PDFium + bundled
# Tesseract, ~16 MB). Without it those pages are flagged but not read.
ocr = [
    "liteparse",
]
# Read Outlook .msg files. .eml and .html need no extra (Python stdlib); .msg is
# an OLE compound format, so it needs extract-msg (~18 MB with its dependency
# tree). Without this extra, .eml/.html still work and .msg is flagged. The
# Windows installer / portable bundle ship it so .msg works out of the box.
email = [
    "extract-msg",
]
# Test runner. The suite under tests/ also runs as plain scripts, but pytest
# discovers the function-based tests (e.g. tests/test_core.py): pytest tests/
dev = [
    "pytest",
]

[project.scripts]
lethe = "app:run_app"

[project.urls]
Homepage = "https://github.com/moonlight-lupin/lethe"
Repository = "https://github.com/moonlight-lupin/lethe"

[tool.setuptools]
# app.py is the UI (a top-level module); the engine + assets live in the package.
py-modules = ["app"]
packages = ["lethe"]
include-package-data = true

[tool.setuptools.package-data]
lethe = ["web_static/*", "web_static/fonts/*"]
